--- a/manifest.json
+++ b/manifest.json
@@ -1,16 +1,13 @@
 {
-    "name": "PWA Installable Website",
-    "short_name": "PWA Website",
-    "description": "A simple PWA installable website",
-    "start_url": "/",
-    "display": "standalone",
-    "background_color": "#ffffff",
-    "theme_color": "#4caf50",
-    "icons": [
-        {
-            "src": "pwa.png",
-            "sizes": "256x256",
-            "type": "image/png"
-        }
-    ]
-}
+    "name": "DS Player",
+    "short_name": "DS Player",
+    "start_url": ".",
+    "display": "fullscreen",
+    "background_color": "black",
+    "description": "DS",
+    "icons": [{
+      "src": "icon.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    }]
+  }
